<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/update_card_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="start"
            android:text="@string/update_card_number"
            android:textColor="@android:color/black"
            android:textSize="@dimen/login_title_text_size" />

        <TextView
            android:id="@+id/credit_card_number_masked"
            android:layout_width="match_parent"
            android:layout_height="@dimen/enter_bid_box_height"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@drawable/rectangle_rounded_bg_grey_light"
            android:gravity="center|start"
            android:padding="@dimen/enter_bid_padding_horizontal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/login_title_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="start"
            android:text="@string/expires"
            android:textColor="@android:color/black"
            android:textSize="@dimen/login_title_text_size" />

        <EditText
            android:id="@+id/credit_card_expire"
            android:layout_width="match_parent"
            android:layout_height="@dimen/enter_bid_box_height"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@drawable/rectangle_rounded"
            android:ems="10"
            android:hint="@string/expires_card_hint"
            android:imeOptions="actionDone"
            android:padding="@dimen/enter_bid_padding_horizontal"
            android:singleLine="true" />

    </LinearLayout>

</ScrollView>


